--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -376,8 +376,8 @@ has the version for the latest release of @R{}).
 @node Help options, Making the manuals, Simple compilation, Installing R under Unix-alikes
 @section Help options
 
-As from @R{} 2.10.0, by default @HTML{} help pages are created when
-needed rather than being built at install time.
+By default @HTML{} help pages are created when needed rather than being
+built at install time.
 
 If you need to disable the server and want HTML help, there is the
 option to continue to build @HTML{} pages when packages are installed
@@ -599,7 +599,7 @@ If you want the @R{} home to be something other than
 @file{@var{libdir}/R}, use @option{rhome}: for example
 
 @example
-make install rhome=/usr/local/lib64/R-2.11.0
+make install rhome=/usr/local/lib64/R-2.13.0
 @end example
 
 @noindent
@@ -1327,10 +1327,10 @@ to the @samp{R} folder on the start menu) and @samp{STARTDIR} (the
 starting directory for @R{} shortcuts, defaulting to something like
 @file{c:\Users\name\Documents\R}).
 
-As from @R{} 2.12.1 the MSI installer can be built both from a 32-bit
-build of @R{} (@file{@value{RWVERSION}-win32.msi}) and from a 64-bit
-build of @R{} (@file{@value{RWVERSION}-win64.msi}, optionally including
-32-bit files by setting the macro @code{HOME32}, when the name is
+The MSI installer can be built both from a 32-bit build of @R{}
+(@file{@value{RWVERSION}-win32.msi}) and from a 64-bit build of @R{}
+(@file{@value{RWVERSION}-win64.msi}, optionally including 32-bit files
+by setting the macro @code{HOME32}, when the name is
 @file{@value{RWVERSION}-win.msi}).  Unlike the main installer, a 64-bit
 MSI installer can only be run on 64-bit Windows.
 
@@ -1398,8 +1398,7 @@ add-on packages from @acronym{CRAN} to run on Mac OS X 10.5/6.
 
 The simplest way is to use @file{R-@value{VERSIONno}.pkg}: just
 double-click on the icon.  Note that Tcl/Tk and the Fortran compiler
-need to be installed separately if needed (unlike for @R{} 2.9.x and
-earlier).
+need to be installed separately if needed.
 
 See the @uref{http://CRAN.R-project.org/@/bin/@/macosx/@/RMacOSX-FAQ.html, R
 for Mac OS X @acronym{FAQ}} for more details.
@@ -1706,13 +1705,11 @@ interface to @code{install.packages}, @code{update.packages} and
 @code{library}.
 
 Windows binary packages for @R{} are nowadays distributed as a single
-binary containing either or both architectures (@R{} 2.11.x had separate
-repository areas for 32- and 64-bit binary packages).
-
+binary containing either or both architectures.
 
 A few of the binary packages need other software to be installed on your
 system: see for example
-@uref{http://cran.r-project.org/@/bin/@/windows/@/contrib/@/2.12/@/@@ReadMe}.
+@uref{http://cran.r-project.org/@/bin/@/windows/@/contrib/@/2.13/@/@@ReadMe}.
 For 64-bit builds, packages using Gtk+ (@pkg{Cairo}, @pkg{RGtk2},
 @pkg{cairoDevice} and those that depend on them) need the @file{bin}
 directory of a bundled distribution from
@@ -1811,18 +1808,17 @@ FFLAGS=-g -O
 FCFLAGS=-g -O
 @end example
 
-As from @R{} 2.12.0 there is also provision for a site-wide
-@file{Makevars.site} file under @file{@var{R_HOME}/etc} (in a
-sub-architecture-specific directory if appropriate).  This is read
-immediately after @file{Makeconf}.
+There is also provision for a site-wide @file{Makevars.site} file under
+@file{@var{R_HOME}/etc} (in a sub-architecture-specific directory if
+appropriate).  This is read immediately after @file{Makeconf}.
 
 @node Multiple sub-architectures,  , Customizing package compilation, Installing packages
 @subsection Multiple sub-architectures
 
 When installing packages from their sources, there are some extra
 considerations on installations which use sub-architectures.  These are
-commonly used on Mac OS X and (from @R{} 2.12.0) on Windows, but can in
-principle be used on other platforms.
+commonly used on Mac OS X and Windows, but can in principle be used on
+other platforms.
 
 When a source package is installed by a build of @R{} which supports
 multiple sub-architectures, the normal installation process installs the
@@ -1929,8 +1925,8 @@ for one or more of the following types of package distributions:
 @itemize
 @item 
 @code{"source"}: located at @file{src/contrib} and containing
-@file{.tar.gz} files.  As from @R{} 2.10.0 other forms of compression
-can be used, e.g.@: @file{.tar.bz2} or @file{.tar.xz} files.
+@file{.tar.gz} files.  Other forms of compression can be used, e.g.@:
+@file{.tar.bz2} or @file{.tar.xz} files.
 
 @item 
 @code{"win.binary"}: located at @file{bin/windows/contrib/@var{x.y}} for
@@ -2038,9 +2034,9 @@ specific country and language.
 
 Historically @R{} worked in the ISO Latin-1 8-bit character set and so
 covered English and most Western European languages (if not necessarily
-their currency symbols).  Since @R{} 2.1.0 it has supported (optionally
-before @R{} 2.10.0) multi-byte character sets such as UTF-8 and others
-used for Chinese, Japanese and Korean.
+their currency symbols).  Since @R{} 2.1.0 it has supported multi-byte
+character sets such as UTF-8 and others used for Chinese, Japanese and
+Korean.
 
 Current builds of @R{} support all the character sets that the
 underlying OS can handle.  These are interpreted according to the
@@ -2630,15 +2626,15 @@ older @TeX{} distributions (TeXLive 2007 and MiKTeX 2.8) used with
 @pkg{texinfo} 4.13.
 
 @cindex Vignettes
-The DVI and PDF documentation and building vignettes needs @command{tex}
-and @command{latex}, or @command{pdftex} and @command{pdflatex}.  As
-from @R{} 2.11.0 we require @LaTeX{} version @code{2005/12/01} or later
-(for UTF-8 support).  Building PDF package manuals (including the @R{}
-reference manual) and vignettes is sensitive to the version of the
-@LaTeX{} package @pkg{hyperref} and we recommend that the @TeX{}
-distribution used is keep up-to-date.  A number of @LaTeX{} packages are
-required (including @pkg{url}) and others such as @pkg{hyperref} are
-desirable.
+The DVI and PDF documentation (including @file{doc/NEWS.pdf} and
+building vignettes needs @command{tex} and @command{latex}, or
+@command{pdftex} and @command{pdflatex}.  We require @LaTeX{} version
+@code{2005/12/01} or later (for UTF-8 support).  Building PDF package
+manuals (including the @R{} reference manual) and vignettes is sensitive
+to the version of the @LaTeX{} package @pkg{hyperref} and we recommend
+that the @TeX{} distribution used is keep up-to-date.  A number of
+@LaTeX{} packages are required (including @pkg{url.sty}) and others such
+as @pkg{hyperref} are desirable.
 
 
 If you want to build from the R Subversion repository you need both
@@ -3291,10 +3287,9 @@ command line as
 If you are building in a directory different from the sources, there can
 be copies of @file{config.site} in the source and the build directories,
 and both will be read (in that order).  In addition, if there is a file
-@file{~/.R/config} (or failing that@footnote{@file{~/.Rconf} were
-supported (but undocumented) in versions of @R{} prior to 2.10.0.}
-@code{~/.Rconfig}), it is read between the @file{config.site} files in
-the source and the build directories.
+@file{~/.R/config} (or failing that) @code{~/.Rconfig}), it is read
+between the @file{config.site} files in the source and the build
+directories.
 
 There is also a general @command{autoconf} mechanism for
 @file{config.site} files, which are read before any of those mentioned
@@ -4390,8 +4385,8 @@ environment can be found in the ``R on AIX'' project on R-Forge
 
 The Cygwin emulation layer on Windows can be treated as a Unix-alike OS.
 This is unsupported, but experiments have been conducted and a few
-workarounds added for @R{} 2.6.0.  @R{} 2.13.0 requires C99 complex type
-support, which is available as from Cygwin 1.7.8 (March 2011).
+workarounds added.  @R{} 2.13.0 requires C99 complex type support, which
+is available as from Cygwin 1.7.8 (March 2011).
 
 Only building as a shared library works,@footnote{Windows DLLs need to
 have all links resolved at build time and so cannot resolve against
@@ -4689,8 +4684,8 @@ install 32/64-bit packages.
 @node 32-bit toolchain, 64-bit toolchain, The MinGW toolchain, The MinGW toolchain
 @subsection 32-bit toolchain
 
-Note that the recommended toolchain for @R{} 2.12.0 differs from that for
-earlier versions, and there are binary incompatibilities, especially
+Note that the recommended toolchain for @R{} >= 2.12.0 differs from that
+for earlier versions, and there are binary incompatibilities, especially
 where C++ code is involved.  So we recommend that all packages are built
 with the current toolchain.
 
@@ -4747,8 +4742,7 @@ toolchain is included in @file{Rtools212.exe}.
 
 @strong{NB:} 64-bit toolchains after late April 2010 at that site
 generate objects with symbols without a leading underscore.  Other
-toolchains (including that used for @R{} 2.11.x) may use leading
-underscores, in which case @code{SYMPAT64} in
+toolchains may use leading underscores, in which case @code{SYMPAT64} in
 @file{src/gnuwin32/MkRules.dist} needs to be set (see the comments in
 that file).  If you are using a binary distribution of @R{}, check that
 the settings of @code{BINPREF} and @code{SYMPAT} in file
