--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -153,8 +153,8 @@ mainly 64-bit Windows 7 and Server 2008, but to a limited extent on
 
 Your file system must allow case-honouring long file names (as is likely
 except perhaps for some network-mounted systems).  A typical 32- or
-64-bit installation takes around 50Mb of disk space, both about 60Mb, a
-full installation about 80Mb and a minimal 32-bit one about 32Mb.
+64-bit installation takes 45--50Mb of disk space, of both about 60Mb, a
+full installation about 80Mb and a minimal 32-bit one about 30Mb.
 
 If you want to be able to build packages from sources, we recommend that
 you choose an installation path not containing spaces.  (Using a path
