remove the damage done by an non-bug report
git-svn-id: https://svn.r-project.org/R/trunk@54748 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -4352,13 +4352,13 @@ The following example is from @file{Poisson.Rd}:
 @end example
 
 @iftex
-For the @LaTeX{} manual, this becomes (after expanding macros in
-@file{R.sty})
-
+For the @LaTeX{} manual, this becomes
+@c: Name-and-shame for Brian Diggs:
+@c: this is TeXinfo markup, not the result of the conversions.
 @quotation
 @cartouche
 @tex
-$$ p(x) = \frac{\lambda^x e^{-\lambda}}{x!}} $$
+$$ p(x) = \lambda^x\ {e^{-\lambda} \over x!} $$
 for $x = 0, 1, 2, \ldots$.
 @end tex
 @end cartouche
