--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4386,7 +4386,9 @@ environment can be found in the ``R on AIX'' project on R-Forge
 The Cygwin emulation layer on Windows can be treated as a Unix-alike OS.
 This is unsupported, but experiments have been conducted and a few
 workarounds added.  @R{} 2.13.0 requires C99 complex type support, which
-is available as from Cygwin 1.7.8 (March 2011).
+is available as from Cygwin 1.7.8 (March 2011).  However, the (new)
+implementation of @code{cacos} gives incorrect results, so
+@code{HAVE_CACOS} needs to be undefined in @file{src/include/config.h}.
 
 Only building as a shared library works,@footnote{Windows DLLs need to
 have all links resolved at build time and so cannot resolve against
@@ -4417,8 +4419,7 @@ The overhead of using shell scripts makes this noticeably slower than a
 native build of @R{} on Windows.
 
 At the time of writing not all the tests pass: there are incorrect
-results from the new-to-Cygwin complex trig functions and from
-wide-character regular expressions code.
+results from wide-character regular expressions code.
 
 @node New platforms,  , Cygwin, Platform notes
 @section New platforms
